Removing java 1.5 code